packages/hyperchad/template/tests/warnings/invalid-hex-color-5-digit.rs
use hyperchad_template::container;

fn main() {
    container! {
        div color=#abcde { "5-digit hex - invalid" }
    };
}
